# advanced_cpp_hw2

./: structure.txt
ArenaBattle/: CMakeLists.txt  MakeFile  README.md  empty.txt  input_2.txt  input_3.txt  output_empty.txt  output_input_1.txt  output_input_2.txt  output_input_3.txt  output_test.txt  output_walls.txt  readme.txt  tanks_game  test.txt  walls.txt
ArenaBattle/common/: ActionRequest.h  BattleInfo.h  Player.h  PlayerFactory.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h  structure.txt
ArenaBattle/include/: AggressiveTank.h  Board.h  EvasiveTank.h  GameManager.h  GameState.h  MyBattleInfo.h  MyPlayer.h  MyPlayerFactory.h  MySatelliteView.h  MyTankAlgorithm.h  MyTankAlgorithmFactory.h  Player1.h  Player2.h  Projectile.h  SatelliteViewImpl.h  Tank.h  utils.h
ArenaBattle/src/: AggressiveTank.cpp  Board.cpp  EvasiveTank.cpp  GameManager.cpp  GameState.cpp  MyBattleInfo.cpp  MyPlayer.cpp  MyPlayerFactory.cpp  MySatelliteView.cpp  MyTankAlgorithm.cpp  MyTankAlgorithmFactory.cpp  Player1.cpp  Player2.cpp  Projectile.cpp  Tank.cpp  main.cpp  utils.cpp
maps/: empty.txt  maze.txt  walls.txt
